[tool.poetry]
name = "x"
version = "0.1.0"
description = ""
authors = ["iovxw <iovxw@outlook.com>"]
readme = "README.md"
#packages = [{include = "x"}]

[tool.poetry.dependencies]
python = "~3.10"
jupyter-cadquery = {version = "^3.5.0", extras = ["prod"]}
build123d = {git = "https://github.com/gumyr/build123d.git"}

# Override a valid version
cadquery = "^2.2.0"
casadi = "3.5.6pre2"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
